[package]
name = "basic"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["interface-instructions"] }
anchor-spl = { version = "0.31.1", features = ["token_2022_extensions", "token_2022"] }


spl-tlv-account-resolution = "0.8.1"
spl-transfer-hook-interface = { version = "0.8.2" }
spl-discriminator = "0.3"